@@ -17,6 +17,9 @@ class EventServiceProvider extends ServiceProvider
         'PragmaRX\Google2FALaravel\Events\LoginSucceeded' => [
             'App\Listeners\LoginSucceed2fa',
         ],
+        'Illuminate\Auth\Events\Login' => [
+            'App\Listeners\LoginListener',
+        ],
     ];
 
     /**
@@ -30,10 +33,9 @@ class EventServiceProvider extends ServiceProvider
         parent::boot();
 
         Event::listen('u2f.authentication', function ($u2fKey, $user) {
-            Validate2faController::loginCallback();
-        });
-        Event::listen('LoginSucceeded', function ($u2fKey, $user) {
-            session([config('u2f.sessionU2fName') => true]);
+            if (config('google2fa.enabled') && ! empty($user->google2fa_secret)) {
+                Validate2faController::loginCallback();
+            }
         });
     }
 }
